--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
   "dependencies": {
     "@material-ui/core": "^3.0.1",
     "@material-ui/icons": "^3.0.1",
+    "copy": "^0.3.2",
+    "copy-dir": "^0.4.0",
+    "copyfiles": "^2.1.0",
+    "mv": "^2.1.1",
+    "path": "^0.12.7",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rename": "^1.0.4",
+    "replace-in-file": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "buildMvc": "node MvcPack",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
